:sparkles: feat: consumo de api na section products

--- a/Principal.html
+++ b/Principal.html
@@ -8,25 +8,25 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="container">
             <div class="header-area">
                 <img src="./assets/images/logo.svg" alt="Logo PetFood">
                 <nav>
                     <div class="menu-mobile"><img src="./assets/images/menu.svg"></div>
                     <ul class="menu-area">
-                        <li class="menu--item"><a href="#">Início</a></li>
-                        <li class="menu--item"><a href="#">Sobre</a></li>
-                        <li class="menu--item"><a href="#">Loja</a></li>
-                        <li class="menu--item"><a href="#">Contato</a></li>      
+                        <li class="menu--item"><a href="#header">Início</a></li>
+                        <li class="menu--item"><a href="#about">Sobre</a></li>
+                        <li class="menu--item"><a href="./Produtos.html">Loja</a></li>
+                        <li class="menu--item"><a href="#footer">Contato</a></li>      
                     </ul>
                 </nav>
             </div>
             <ul class="menu-mobile-area closed">
-                <li class="menu-mobile--item"><a href="#">INÍCIO</a></li>
-                <li class="menu-mobile--item"><a href="#">SOBRE</a></li>
-                <li class="menu-mobile--item"><a href="#">LOJA</a></li>
-                <li class="menu-mobile--item"><a href="#">CONTATO</a></li>      
+                <li class="menu-mobile--item"><a href="#header">INÍCIO</a></li>
+                <li class="menu-mobile--item"><a href="#about">SOBRE</a></li>
+                <li class="menu-mobile--item"><a href="./Produtos.html">Loja</a></li>
+                <li class="menu-mobile--item"><a href="#footer">Contato</a></li>      
             </ul>
     </header>
     
@@ -38,7 +38,7 @@
                         <div class="banner--desc--text">
                             <h1>Tudo o que seu pet precisa a PetFood tem!</h1>
                             <p class="text-light">Seja para comprar um petisco ou uma roupinha estilosa... basta você escolher o local de entrega, selecionar como deseja pagar e pronto!</p>
-                            <a href="#" class="button">Conferir produtos</a>
+                            <a href="./Produtos.html" class="button">Conferir produtos</a>
                         </div>
                     </div>
                     <div class="banner--image">
@@ -170,7 +170,7 @@
             </section>
     </main> 
 
-    <footer>
+    <footer id="footer">
         <div class="fotter-logo">
             <img src="./assets/images/logo.svg" alt="Logo PetFood">
         </div>
@@ -200,5 +200,6 @@
 
 
     <script src="./script.js"></script>
+    <script src="./products.js"></script>
 </body>
 </html>
