:sparkles: feat: listagem de produtos no carrinho

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="header">
         <div class="container">
             <div class="header-area">
-                <img src="./assets/images/logo.svg" alt="Logo PetFood">
+                <a href="#header"><img src="./assets/images/logo.svg" alt="Logo PetFood"></a>
                 <nav>
                     <div class="menu-mobile"><img src="./assets/images/menu.svg"></div>
                     <ul class="menu-area">
@@ -196,6 +196,8 @@
                 </li>
             </ul>
         </address>
+
+        <span>Desenvolvido por <a href="https://davidaugusto.tech/" target="_blank">David Augusto</a></span>
     </footer>
 
 
