:pencil: alteração de textos

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                         <div class="about-area--desc--text">
                             <h4>Sobre nós</h4>
                             <h2>O melhor para seu pet</h2>
-                            <p>Sabemos que a correria do dia a dia ou até mesmo a preguiça, exigem soluções rápidas e práticas. Que tal a PetFood para salvar seu dia? Compras realizadas até 12hr são entregues no mesmo dia!</p>
+                            <p>Sabemos que a correria do dia a dia ou até mesmo a preguiça, exigem soluções rápidas e práticas. Nosso maior foco é que seu animalzinho tenha itens essenciais no dia-a-dia dele com altíssima qualidadee na hora em que ele mais precisa! </p>
                             <ul class="about-area--list">
-                                <li class="about-area--item">is simply dummy text of the</li>
-                                <li class="about-area--item">teste</li>
-                                <li class="about-area--item">is simply dummy text of the</li>
+                                <li class="about-area--item">is simply dummy text of the </li>                           </li>
+                                <li class="about-area--item">is simply dummy text of the </li>
+                                <li class="about-area--item">is simply dummy text of the </li>
                             </ul>
-                        </div>
+                        </div> 
                     </div>
             </section>
 
