--- a/Produtos.html
+++ b/Produtos.html
@@ -79,7 +79,7 @@
                     <div class="banner--desc"> 
                         <div class="banner--desc--text">
                             <h1>Tudo o que seu pet precisa a PetFood tem!</h1>
-                            <p class="text-light">Seja para comprar um petisco ou uma roupinha estilosa... basta você escolher o local de entrega, selecionar como deseja pagar e pronto!</p>
+                            <p class="text-light">Seja para comprar um petisco ou uma roupinha estilosa... basta você selecionar o produto, escolher como deseja pagar e pronto!</p>
                             <a href="#" class="button">Conferir produtos </a>
                         </div>
                     </div>
