--- a/Produtos.html
+++ b/Produtos.html
@@ -19,7 +19,7 @@
                     <ul class="menu-area">
                         <li class="menu--item"><a href="./index.html">Início</a></li>
                         <li class="menu--item"><a href="./index.html">Sobre</a></li>
-                        <li class="menu--item"><a href="./index.html">Loja</a></li>
+                        <li class="menu--item"><a href="./Produtos.html">Loja</a></li>
                         <li class="menu--item"><a href="./index.html">Contato</a></li>
                         <li class="menu--item"><i class="fa-solid fa-cart-shopping"></i></li>   
                     </ul>
