:pencil: altereção  de textos

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                             <h2>O melhor para seu pet</h2>
                             <p>Sabemos que a correria do dia a dia ou até mesmo a preguiça, exigem soluções rápidas e práticas. Nosso maior foco é que seu animalzinho tenha itens essenciais no dia-a-dia dele com altíssima qualidadee na hora em que ele mais precisa! </p>
                             <ul class="about-area--list">
-                                <li class="about-area--item">is simply dummy text of the </li>                           </li>
-                                <li class="about-area--item">is simply dummy text of the </li>
-                                <li class="about-area--item">is simply dummy text of the </li>
+                                <li class="about-area--item"> Parcele em até 10x sem juros </li>                           </li>
+                                <li class="about-area--item"> Descontos semanais </li>
+                                <li class="about-area--item"> Suporte Online 24h </li>
                             </ul>
                         </div> 
                     </div>
@@ -115,50 +115,50 @@
             </section>
 
             <section id="promotion">
-                <h2>Promoções da semana</h2>
+                <h2>Destaque da semana</h2>
                 <div class="promotion-area">
                     <div class="promotion-featured">
                         <img class="promotion--img" src="./assets/images/dog food.png" alt="Imagem ração para gatos e cachorros">
                         <h2 class="medium-text">Ração seca para cachorros</h2>
-                        <p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+                        <p>Encontre medicamentos, petiscos, rações, brinquedos educativos e outros objetos indispensáveis em nossa loja online.</p>
                         <a href="#" class="orange-text">Ver mais produtos ></a>
                     </div>
                     <div class="promotion-products">
                         <div class="promotion-products--item">
                             <img class="promotion-products--item--image" src="./assets/images/golden_gatos_frango.png" alt="Imagem da ração de frango para gatos Golden">
                             <h5>Golden</h5>
-                            <p class="small-text bold-text ">Raçã o Golden para Gatos Adultos Castrados Sabor Frango</p>
+                            <p class="small-text bold-text ">Raçã o Golden para Gatos Adultos Sabor Frango</p>
                             <h3>R$30,00</h3>
                         </div>
                         <div class="promotion-products--item">
                             <img class="promotion-products--item--image" src="./assets/images/royal_canin_maxi.png" alt="Imagem da ração de frango para gatos Golden">
-                            <h5>Golden</h5>
-                            <p class="small-text bold-text " class="bold-text">Raçã o Golden para Gatos Adultos Castrados Sabor Frango</p>
-                            <h3>R$30,00</h3>
+                            <h5>Royal Canin</h5>
+                            <p class="small-text bold-text " class="bold-text">Ração Royal Canin Maxi - Cães Adultos</p>
+                            <h3>R$212,00</h3>
                         </div>
                         <div class="promotion-products--item">
                             <img class="promotion-products--item--image" src="./assets/images/recovery_roytal_canin.png" alt="Imagem da ração de frango para gatos Golden">
-                            <h5>Golden</h5>
-                            <p class="small-text bold-text ">Raçã o Golden para Gatos Adultos Castrados Sabor Frango</p>
-                            <h3>R$30,00</h3>
+                            <h5>Royal Canin</h5>
+                            <p class="small-text bold-text ">Recovery Royal Canin Veterinary Ração Lata</p>
+                            <h3>R$25,80</h3>
                         </div>
                         <div class="promotion-products--item">
                             <img class="promotion-products--item--image" src="./assets/images/peitoral_zeedog.png" alt="Imagem da ração de frango para gatos Golden">
-                            <h5>Golden</h5>
-                            <p class="small-text bold-text ">Raçã o Golden para Gatos Adultos Castrados Sabor Frango</p>
-                            <h3>R$30,00</h3>
+                            <h5>Zoo</h5>
+                            <p class="small-text bold-text ">Peitoral para Cachorros Air Mesh Phantom</p>
+                            <h3>R$136,99</h3>
                         </div>
                         <div class="promotion-products--item">
                             <img class="promotion-products--item--image" src="./assets/images/ração_umida_whiskas.png" alt="Imagem da ração de frango para gatos Golden">
-                            <h5>Golden</h5>
-                            <p class="small-text bold-text ">Raçã o Golden para Gatos Adultos Castrados Sabor Frango</p>
-                            <h3>R$30,00</h3>
+                            <h5>Whiskas</h5>
+                            <p class="small-text bold-text ">Whiskas Sachê Adulto Carne Molho</p>
+                            <h3>R$4,99</h3>
                         </div>
                         <div class="promotion-products--item">
                             <img class="promotion-products--item--image" src="./assets/images/areia_pipicat.png" alt="Imagem da ração de frango para gatos Golden">
-                            <h5>Golden</h5>
-                            <p class="small-text bold-text ">Raçã o Golden para Gatos Adultos Castrados Sabor Frango</p>
-                            <h3>R$30,00</h3>
+                            <h5>Pipicat</h5>
+                            <p class="small-text bold-text ">Areia Sanitária Pipicat Classic para Gatos</p>
+                            <h3>R$22,90</h3>
                         </div>
                     </div>
                 </div>
