:art: style: favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Food</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="imagem/png" href="./assets/images/favicon.svg" />
+    <title>PetFood</title>
 </head>
 <body>
     <header id="header">
