--- a/Produtos.html
+++ b/Produtos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://kit.fontawesome.com/ef2c46f17f.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="imagem/png" href="./assets/images/favicon.svg" />
     <title>PetFood</title>
 </head>
 <body>
