:pencil: atualização de textos

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="banner--desc"> 
                         <div class="banner--desc--text">
                             <h1>Tudo o que seu pet precisa a PetFood tem!</h1>
-                            <p class="text-light">Seja para comprar um petisco ou uma roupinha estilosa... basta você escolher o local de entrega, selecionar como deseja pagar e pronto!</p>
+                            <p class="text-light">Seja para comprar um petisco ou uma roupinha estilosa... basta você selecionar o produto, escolher como deseja pagar e pronto!</p>
                             <a href="./Produtos.html" class="button">Conferir produtos</a>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                 <div class="promotion-area">
                     <div class="promotion-featured">
                         <img class="promotion--img" src="./assets/images/dog food.png" alt="Imagem ração para gatos e cachorros">
-                        <h2 class="medium-text">Ração seca para cachorros</h2>
+                        <h2 class="medium-text">Produtos de qualidade</h2>
                         <p>Encontre medicamentos, petiscos, rações, brinquedos educativos e outros objetos indispensáveis em nossa loja online.</p>
                         <a href="#" class="orange-text">Ver mais produtos ></a>
                     </div>
