--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </ul>
         </address>
 
-        <span>Desenvolvido por <a href="https://davidaugusto.tech/" target="_blank">David Augusto</a></span>
+        <span>Desenvolvido por David Augusto</span>
     </footer>
 
 
